fix(globals): fix spacing between li elemenst inside ul and ol lists

--- a/css/globals.css
+++ b/css/globals.css
@@ -126,7 +126,11 @@ ol li::before {
     font-weight: bold;
     position: absolute;
     left: 0;
-    font-size: 1.2em;
+    font-size: 1.6rem;
+}
+
+li:not(:last-child) {
+    margin-bottom: 1.6rem; 
 }
 
 a {
